tests/NormalTests/paczka1/fuzzy1/86403135.err
Error in line 2: UHL3M8 A719 334,7
Error in line 3: UHL3M8 S710 30,6
Error in line 4: UHL3M8 A603 4,2
Error in line 22: 4IFihet6R A603 0,6
Error in line 31: ii47 A603 2,07
Error in line 27: ZdWyFX7UF0H A603 45,8
